[package]
name = "docufort"
version = "0.5.1"
edition = "2021"
repository = "https://github.com/ThinkingJoules/docufort"
description = "A toolbox for the docufort crash fault-tolerant append only file format."
license = "MIT"
keywords = ["append-only-file","crash-recovery","file"]
categories = ["filesystem","data-structures","encoding"]

[dependencies]
reed-solomon = "0.2.1"
rayon = {version = "1.10.0", optional = true}

[dev-dependencies]
blake3 = "1.5.1"
zstd = "0.12.4"

[features]
ecc_len_2 = []
ecc_len_4 = []
ecc_len_6 = []
ecc_len_8 = []
ecc_len_16 = []
ecc_len_32 = []
parallel = ["rayon"]
default = ["ecc_len_4"]
