[package]
name = "docufort"
version = "0.6.0"
edition = "2021"
repository = "https://github.com/ThinkingJoules/docufort"
description = "A toolbox for the docufort crash fault-tolerant append only file format."
license = "MIT"
keywords = ["append-only-file","crash-recovery","file"]
categories = ["filesystem","data-structures","encoding"]

[dependencies]
reed-solomon = "0.2"
rayon = {version = "1", optional = true}

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
blake3 = "1.6"
zstd = "0.13"

[features]
ecc_len_2 = []
ecc_len_4 = []
ecc_len_6 = []
ecc_len_8 = []
ecc_len_16 = []
ecc_len_32 = []
parallel = ["rayon"]
default = ["ecc_len_4"]
